# advent_of_code_2022_OCAML

./: .gitignore  README.md  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune  dune-project  utils.ml  utils.mli
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/day01/: day01.cma  day01.cmxa  day01.cmxs
_build/default/day01/.day01.objs/byte/: day01.cmi  day01.cmo  day01.cmt
_build/default/day01/.day01.objs/native/: day01.cmx
_build/default/day01/.merlin-conf/: lib-day01
_build/default/lib/: lib.cma  lib.cmxa  lib.cmxs  lib.ml-gen  utils.ml
_build/default/lib/.lib.objs/: lib__Utils.impl.d  lib__Utils.intf.d
_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__Utils.cmi  lib__Utils.cmo  lib__Utils.cmt  lib__Utils.cmti
_build/default/lib/.lib.objs/native/: lib.cmx  lib__Utils.cmx
_build/default/lib/.merlin-conf/: lib-lib
day01/: day01.ml
lib/: utils.mli
