(library
  (name utils)
  (modules utils)
)

(executable
  (name day01)
  (libraries utils)
  (modules day01)
)

(executable
  (name day02)
  (libraries utils)
  (modules day02)
)

(executable
  (name day03)
  (libraries utils)
  (modules day03)
)

(executable
  (name day04)
  (libraries utils)
  (modules day04)
)
