(library
  (name utils)
  (modules utils)
)

(executable
  (name day01)
  (libraries utils)
  (modules day01)
)

(executable
  (name day02)
  (libraries utils)
  (modules day02)
)

(executable
  (name day03)
  (libraries utils)
  (modules day03)
)

(executable
  (name day04)
  (libraries utils)
  (modules day04)
)

(executable
  (name day05)
  (libraries utils)
  (modules day05)
)

(executable
  (name day06)
  (libraries utils)
  (modules day06)
)

(executable
  (name day07)
  (libraries utils)
  (modules day07)
)

(executable
  (name day08)
  (libraries utils)
  (modules day08)
)

(executable
  (name day09)
  (libraries utils)
  (modules day09)
)

(executable
  (name day10)
  (libraries utils)
  (modules day10)
)

(executable
  (name day11)
  (libraries utils)
  (modules day11)
)

(executable
  (name day12)
  (libraries utils)
  (modules day12)
)

(executable
  (name day13)
  (libraries utils)
  (modules day13)
)

(executable
  (name day14)
  (libraries utils)
  (modules day14)
)

(executable
  (name day15)
  (libraries utils str)
  (modules day15)
)

(executable
  (name day16)
  (libraries utils str)
  (modules day16)
)

(executable
  (name day17)
  (libraries utils str)
  (modules day17)
)

(executable
  (name day18)
  (libraries utils str)
  (modules day18)
)

(executable
  (name day19)
  (libraries utils str)
  (modules day19)
)

(executable
  (name day20)
  (libraries utils str)
  (modules day20)
)

(executable
  (name day21)
  (libraries utils str)
  (modules day21)
)

(executable
  (name day22)
  (libraries utils str)
  (modules day22)
)

(executable
  (name day23)
  (libraries utils str)
  (modules day23)
)

(executable
  (name day24)
  (libraries utils str)
  (modules day24)
)

(executable
  (name day25)
  (libraries utils str)
  (modules day25)
)